[package]
name = "actix-tom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-http = "^3.2"
actix-cors = "^0.6"
actix-files = "0.6.0"

async-stream = "0.3"
dotenv = "0.15"
once_cell = "^1.14"
fastdate = "~0.1"
local_ipaddress = "^0.1"

log = "0.4"
env_logger = "0.10.0"
fast_log = { version = "~1.5", features = ["zip"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

tera = "1.8.0"

rbs = { version = "0.1"}
rbatis = { version = "4.0"}
rbdc-mysql = { version = "0.1" }
rbdc-mssql = {version = "0.1" }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "mssql" ] }

fancy-regex = "^0.10"

[profile.dev]

[profile.release]